# cafe-data-cleaning

./: .env_example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md  presentation.md
notebooks/: cafe_eda.ipynb
reports/: PROCESS_REPORT.md  REPORT_TEMPLATE.md
scripts/: build_notebook.py  pipeline.py
